<resources>
    <string name="app_name">JustPay4u</string>
    <string name="newpass_error">New password &amp; confirm password should be same</string>
    <string name="password_error">Please enter valid password</string>
    <string name="pincode_error">Enter valid pincode</string>
    <string name="mobilenumber_error">Enter Valid Mobile Number</string>
    <string name="action_settings">Settings</string>
    <string name="rechage_note"><font color="black">Note:</font> <font color="red">Please verify all information before doing transacitons. After transaction our company will be not responsible.</font></string>
    <string name="rechage_confiorm_note"><font color="black"><b>Note:</b></font> <font color="red"><i>Kindly check once again all information before doing transacitons. Otherwise after transaction recharge amount will not reverse.</i></font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bene_acc_error">Please enter valid account number</string>
    <string name="bene_ifsc_error">Please enter valid IFSC Code</string>
    <string name="err_msg_network">Slow or No Internet Connection!!!</string>
    <string name="err_msg_email">Please Enter Valid Email Id</string>
    <string name="err_msg_mobile">Please Enter Your Mobile No.</string>
    <string name="err_msg_mobile_length">Please Enter Your Mobile No.of 10 Digits.</string>
    <string name="aadhaar">Please Enter Aadhaar No.of 12 Digits.</string>
    <string name="err_msg_pass">Please Enter Your Password.</string>
    <string name="err_msg_text">Please Enter the Text.</string>
    <string name="password_expired_msg">Your password has been expired, Please change before using this app</string>
    <string name="pin_password_expired_msg">Your have not created Pin Password, Please create first before using this app.</string>
    <string name="samepass_error">New password cann\'t be same as old password!</string>
    <string name="str_ShowOnPermisstion">Please Allow some permission for your app. If you deny permissions will not be able to use functionality of this app.</string>
    <string name="rupiya">\u20B9</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="network_error_message">Please check your network connection and try again.</string>
    <string name="str_Note"><font color="black">Note:</font> <font color="red">Always make sure your Account Number \u0026 IFSC Code is correct. Company will not be liable for any wrong transactions.</font></string>
    <string name="note"> <font color="red"> Admin charge 10% applied.</font></string>
    <string name="err_msg_valid_mobile">Please Enter Valid Mobile No</string>
    <string name="paymentoptioncode">payment option code</string>
    <string name="network_error">Slow Network Connection, Please check your network connection and try again!!!</string>
    <string name="radio_bluetooth">Bluetooth</string>
    <string name="radio_usb">USB</string>
    <string name="err_something_went_wrong">Temporary server error has been occurred.</string>
    <string name="NotAuthorized">You are not authorized to use this service.</string>
    <string name="mobile_tollfree">Mobile Tollfree </string>
    <string name="dth_tollfree">DTH Tollfree </string>
    <string name="Bank_string">In order to make an money transfer or payment request, you will need the following details relating to your recipient\'s bank account</string>
    <string name="some_thing_error">Some thing error please try after some time</string>
    <string name="err_empty_field">Field can\'t be empty</string>
    <string name="invalid_aadhar">Invalid AADHAR no.</string>
    <string name="invalid_pan">Enter Valid PAN no</string>
    <string name="profile_update_notice">For KYC update please update user with all given fields</string>
    <string name="amount">Amount</string>
    <string name="start_date">From Date</string>
    <string name="end_date">To Date</string>
    <string name="wallet_type">Wallet Type</string>
    <string name="action_filter">Filter</string>
    <string name="debit_credit">Debit/Credit</string>
    <string name="received_by">Received By</string>
    <string name="choose_top">Choose Top</string>
    <string name="choose_refund_status">Choose Refund Status</string>
    <string name="choose_date_type">Choose Date Type</string>
    <string name="choose_criteria">Choose Criteria</string>
    <string name="enter_criteria">Enter Criteria</string>
    <string name="AepsNotApproved">Your Aeps status is not approved.</string>
    <string name="SERVICEDOWN"><b><i>SERVICEDOWN</i></b></string>
    <string name="UNDERSCREENING"><b>UNDERSCREENING</b></string>
    <string name="REJECT"><b><i>REJECTED</i></b></string>
    <string name="UNAUTHORISED"><b>UNAUTHORISED</b></string>
    <string name="INCOMPLETE"><b>INCOMPLETE</b></string>
    <string name="Redirection"><b>Redirection</b></string>
    <string name="mob_num">Mobile Number</string>
    <string name="Physical">Physical</string>
    <string name="Digital">Digital</string>
    <string name="str_ShowOnPermisstionDenied"><![CDATA[To using all functionality of this app, please allow permissions. Go to App Setting -> Permissions enable all permissions.]]></string>
    <string name="dispute_msg">Are you sure you want to Dispute to this transaction</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="child_mobile_number">Child Mobile Number</string>
    <string name="realapi_popup_english_billpayment_msg">Dear Partner Currently %1$s Lapu Route is Down.
Please enable Real API Route to Pay %2$s Bill instantly any time</string>
    <string name="realapi_popup_english_recharge_msg">Dear Partner Currently %1$s Lapu Route is Down.
Please enable Real API Route to Recharge %2$s instantly any time</string>
    <string name="realapi_popup_hindi_billpayment_msg">प्रिय विक्रेता अभी %1$s का बिल भुगतान सिम रूट से बंद है| अभी बिल भुगतान करने लिए Real API Route को Activate करें|</string>
    <string name="realapi_popup_hindi_recharge_msg">प्रिय विक्रेता अभी %1$s का रिचार्ज सिम रूट से बंद है| अभी रिचार्ज करने लिए Real API Route को Activate करें|</string>
    <string name="realapi_popup_english_dthsubscription_msg">Dear Partner Currently %1$s Lapu Route is Down.
Please enable Real API Route to Pay %2$s for Subscription instantly any time</string>
    <string name="realapi_popup_hindi_dthsubscription_msg">प्रिय विक्रेता अभी %1$s का बिल भुगतान सदस्यता के लिए सिम रूट से बंद है| अभी बिल भुगतान करने लिए Real API Route को Activate करें|</string>
    <string-array name="nonActualDeviceSimArray">
        <item>Android</item>
        <item>android</item>
        <item>emulator</item>
        <item>Emulator</item>
        <item>T-Mobile</item>

    </string-array>
    <string name="change_pass_msg">Inorder to <b>protect your account</b>, make sure your password.\n\n
        <li>Password should be more then 7 character</li>\n
        <li>Besides letters, include at least a number and symbol</li>\n
        <li>Password is case sensitive</li>\n
        <li>Avoid using the same password for multiple site</li>\n
    <li>Does not match or significantly contain your username e.g. do not use <b>\'username123\'</b></li></string>
    <string name="change_mpin_msg">Inorder to <b>protect your account</b>, make sure your MPIN.\n\n
        <li>Mpin should not more than 4 character</li></string>
    <string name="continue_signature">Continue</string>
    <string name="clear">Clear</string>
    <string name="Please_Sign_Below_signature">Please Sign Below</string>
    <string name="ekyc_steps">2. After installing the application the merchant has to enter their Username &lt;b>(%1$s)&lt;/b> &amp; super merchant id &lt;b>(%2$s)&lt;/b> then click on Next.&lt;br>&lt;br>

3. Then merchant needs to enter their respective Aadhar number, Active Mobile number, PAN Number, and the MPOS Serial number (optional - if the Mpos is allocated to the merchant).&lt;br>&lt;br>

4. After entering the details by merchant needs to acknowledge the below undertaking by selecting the tick-box and need to click on Next.&lt;br>&lt;br>

5. After clicking on Next the verification OTP will be received by the merchant on the mobile number which he/she has entered.&lt;br>&lt;br>

6. Once the correct OTP is entered and validated, the merchant will have to do the biometric authentication by providing a thumb impression through the connected biometric device.&lt;br>&lt;br>

7. After the biometric authentication a Success/Failure message will appear on the screen, then the merchant E-KYC verification will be completed.</string>
    <string name="copy_link">Copy Link</string>
    <string name="user_">User -</string>
    <string name="deactive">DeActive</string>
    <string name="active">Active</string>
    <string name="share">Share</string>
    <string name="action_sort">Sort</string>
    <string name="sorting">Sort By</string>
    <string name="sort_by">Sorting</string>
    <string name="below_is_the_process">Below is the process for E-KYC Verification that the merchant needs to follow.</string>
    <string name="_1_the_merchant_need">1. The merchant needs to onboarding through the ICICI Verification Application. So for installing ICICI Verification Application on android device click on below Install App button.</string>
    <string name="install_app">Install App</string>
</resources>