<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey_dark"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/Please_Sign_Below_signature"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomView"
            android:layout_below="@+id/text1"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rounded_white"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/clear"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/continue_signature"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
