<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">


    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sort_by" />
    <LinearLayout
        android:id="@+id/typeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/typeTitleTv"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:id="@+id/typeChooserView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/rect"
            android:gravity="center_vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/typeChooser"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:hint="All"
                android:inputType="text"
                android:longClickable="false"
                android:padding="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_arrow_down"
                app:tint="@color/colorPrimary" />

        </RelativeLayout>

        <Button
            android:id="@+id/sort"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/rounded_accent"
            android:elevation="@dimen/_4sdp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/action_sort"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>